welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:8: error: not found: value nb
    for (i <- repere to repere+nb) {
                               ^golomb:6: error: type mismatch;
 found   : Unit
 required: Int
  for (k <- 0 to num) {
         ^